# AI-Powered-Security-Platform

./: .gitignore  .pre-commit-config.yaml  COMPETITIVE_ADVANTAGE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.advanced  LICENSE  PROJECT_AUDIT_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SCOUT_ERROR_TRACKING_GUIDE.md  SECURITY.md  VOICE_FEATURES.md  VOICE_IMPLEMENTATION_SUMMARY.md  WHAT_MAKES_IT_SPECIAL.md  WORKFLOWS.md  advanced_auto_fix_linting.py  auto_fix_linting.py  batch_fix_files.py  batch_syntax_fixer.py  conversational_voice_demo.py  demo.py  docker-compose.yml  final_cleanup.py  fix_backslash_one.py  install.py  pyproject.toml  pytest.ini  requirements-ai.txt  requirements-blockchain.txt  requirements-core.txt  requirements-full.txt  requirements-test.txt  requirements-voice.txt  requirements-web.txt  requirements.txt  scout_error_examples.py  scout_startup_integration.py  setup.py  structure_fixer.py  (+4 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  codeql.yml  community.yml  dependencies.yml  deploy.yml  labels.yml  monitoring.yml  performance.yml  release.yml  security.yml
scout/: __init__.py  ai_engine.py  blockchain_security.py  blockchain_security_broken.py  blockchain_security_fixed.py  cli.py  compliance.py  config.py  logging.py  realtime_monitor.py  realtime_monitor_broken.py  realtime_monitor_fixed.py  reporting.py  user_management.py  voice_assistant.py  voice_assistant_broken.py  voice_assistant_fixed.py  vulnerability_db.py
scout/checks/: dir_traversal.py  directory_listing.py  fix_suggestions.py  headers.py  http_methods.py  https.py  open_redirect.py  sensitive_endpoints.py  sensitive_files.py  sqli.py  vuln_lookup.py  xss.py
scout/commands/: advanced.py  ai_assistant.py  api.py  assess.py  audit.py  dashboard.py  discover.py  example.py  export.py  help.py  patch.py  plugin.py  report.py  scan.py  schedule.py  secrets.py  ticket.py  user.py  voice.py  vuln_apis.py  webscan.py
tests/: conftest.py  test_ai_engine.py  test_cli.py  test_compliance.py  test_scout.py  test_voice_assistant.py
voice_recordings/voice_session_20250619_205140/: events.json  summary.md
voice_recordings/voice_session_20250619_205319/: events.json  summary.md
